PAGOPA-1492 fixing toList issue